메가 톡 채팅목록 페이지

--- a/css/index.css
+++ b/css/index.css
@@ -94,3 +94,22 @@ hr {
 
     margin-left: 15px;
 }
+
+.navigation-bar>ul>li:nth-child(1) {
+    margin-left: 3rem;
+
+    background: url(../images/user-fill.png);
+    background-size: cover;
+
+    width: 2rem;
+    height: 2rem;
+}
+
+.navigation-bar>ul>li:nth-child(2) {
+    margin-left: 10rem;
+    background: url(../images/chat-blank.png);
+    background-size: cover;
+
+    width: 2rem;
+    height: 2rem;
+}
