--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,42 +1,48 @@
 .navigation-bar {
     position: fixed;
-    width: 100%;
-    height: 9vh;
+
+    min-width: 360px;
+    max-width: 600px;
+
+    width: 100vw;
+    height: 14vw;
+
     background-color: #EFEFEF;
     bottom: 0;
+
 }
 
 .navigation-bar>ul>li {
     position: fixed;
 
-    bottom: 30px;
+    bottom: 5vw;
 }
 
 .navigation-bar>ul>li:nth-child(3) {
-    margin-left: 17rem;
+    margin-left: 45vw;
     background: url(../images/view-blank.png);
     background-size: cover;
 
-    width: 2rem;
-    height: 2rem;
+    width: 5vw;
+    height: 5vw;
 }
 
 .navigation-bar>ul>li:nth-child(4) {
-    margin-left: 24rem;
+    margin-left: 62vw;
     background: url(../images/shopping-blank.png);
     background-size: cover;
 
-    width: 2rem;
-    height: 2rem;
+    width: 5vw;
+    height: 5vw;
 }
 
 .navigation-bar>ul>li:nth-child(5) {
-    margin-left: 31rem;
+    margin-left: 79vw;
     background: url(../images/more-blank.png);
     background-size: cover;
 
-    width: 2rem;
-    height: 2rem;
+    width: 5vw;
+    height: 5vw;
 }
 
 .navigation-icon {
