--- a/css/chat.css
+++ b/css/chat.css
@@ -16,7 +16,7 @@ section>a {
     display: flex;
     flex-direction: row;
 
-    width: 10vw;
+    width: 100vw;
     height: 15vw;
 
     margin-bottom: 2.5vw;
@@ -24,6 +24,8 @@ section>a {
 
 .chat-box {
     display: flex;
+    position: relative;
+
 }
 
 .chat-img {
@@ -31,7 +33,7 @@ section>a {
     background: url(../images/avatar.png);
     background-size: cover;
 
-    width: 14vw;
+    width: 13vw;
     height: 13vw;
 
     border-radius: 40%;
@@ -39,8 +41,8 @@ section>a {
 
 .chat-box>h2 {
     position: relative;
-    width: 11vw;
-    height: 2vw;
+    width: 13vw;
+    height: 5vw;
 
     font-size: 3.8vw;
     font-weight: 600;
@@ -54,7 +56,7 @@ section>a {
     font-size: 3.3vw;
 
     top: 6vw;
-    right: 6vw;
+    right: 7vw;
 
     width: 54vw;
     height: 8vw;
