--- a/css/oversize.css
+++ b/css/oversize.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     position: absolute;
 
-    height: 100%;
+    height: 100vh;
     width: 100vw;
 
     justify-content: center;
