채팅창 대화창 하단에 고정

--- a/css/aliceChatting.css
+++ b/css/aliceChatting.css
@@ -93,8 +93,11 @@
 }
 
 .text-box {
+    position: fixed;
     display: flex;
     flex-direction: row;
+
+    bottom: 0;
 
     width: 100vw;
     height: 10vh;
